# curso_agent_ia_mcp_analaizer

./: .gitignore  .template.env  2_clase.ipynb  3_clase.ipynb  requirements.txt
modulo_1/: .gitignore  1_clase.ipynb  2_clase.ipynb  3_clase.ipynb  4_clase.ipynb  README.md  app.py
modulo_2/: 1_clase.ipynb  2_clase.ipynb  3_clase.ipynb  4_clase.ipynb  requirements.txt
modulo_2/ejercicio/: deepl_research.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
modulo_3/: pyproject.toml
modulo_3/coder/: .template.env
modulo_3/coder/output/: coder_and_output.txt
modulo_3/coder/src/coder/: crew.py  main.py
modulo_3/debater/: README.md  pyproject.toml
modulo_3/debater/output/: decide.md  oppose.md  propose.md
modulo_3/debater/src/debater/: crew.py  main.py
modulo_3/debater/src/debater/config/: agents.yaml  tasks.yaml
modulo_3/engineering_team/: .template.env  pyproject.toml
modulo_3/engineering_team/output/: accounts.py  app.py  design.txt  test_accounts.py
modulo_3/engineering_team/src/engineering_team/: crew.py  (+1 more)
modulo_3/financial_researche/: .gitignore  .template.env  README.md  pyproject.toml  requirements.txt
modulo_3/financial_researche/src/financial_researche/: crew.py  main.py
modulo_3/financial_researche/src/financial_researche/config/: agents.yaml  tasks.yaml
modulo_3/stock_pricer/: .gitignore  .template.env  README.md  pyproject.toml  requirements.txt
modulo_3/stock_pricer/memory/: chroma.sqlite3  stock_pricer_ltm.db
modulo_3/stock_pricer/output/: research_report_Tecnología.json  selected_company_Tecnología.json  trending_companies_Tecnología.json
modulo_3/stock_pricer/src/stock_pricer/: crew.py  main.py
modulo_3/stock_pricer/src/stock_pricer/config/: agents.yaml  tasks.yaml
modulo_3/stock_pricer/src/stock_pricer/tools/: push_tool.py
perfil/: yoMismo.txt
(+4 files in other folders)
