[project]
name = "debater"
version = "0.1.0"
description = "debater using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
debater = "debater.main:run"
run_crew = "debater.main:run"
train = "debater.main:train"
replay = "debater.main:replay"
test = "debater.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
