[project]
name = "financial_researche"
version = "0.1.0"
description = "financial_researche using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
financial_researche = "financial_researche.main:run"
run_crew = "financial_researche.main:run"
train = "financial_researche.main:train"
replay = "financial_researche.main:replay"
test = "financial_researche.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
